--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400&display=swap');
+
 .App {
   text-align: center;
+  overflow: hidden;
+}
+
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
 }
 
 .App-logo {
